2015-05-07  carl  <cth@carlh.net>

	* Fix sometimes-missing channel labels on OS X audio analysis.

2015-05-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.9 released.

2015-05-06  Carl Hetherington  <cth@carlh.net>

	* Efficiency fix for cases where there is a lot of processing
	power.

2015-05-05  c.hetherington  <cth@carlh.net>

	* Add UTF-8 content type to KDM emails to try to fix #549.

	* Only enable OK button in certificate download dialogues
	when a download has succeeded (#404).

2015-05-04  Carl Hetherington  <cth@carlh.net>

	* Remove user configuration of colour conversion presets.

	* Version 1.78.8 released.

2015-05-04  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2015-05-03  Carl Hetherington  <cth@carlh.net>

	* Add a simple content properties dialogue (#554).

2015-05-02  Carl Hetherington  <cth@carlh.net>

	* Fix ISDCF name generation when channels are mapped but
	not included in the DCP because its channel count is
	too low.

2015-05-01  carl  <cth@carlh.net>

	* Don't load image files whose names start with ._ as they
	are probably OS X resource files.

2015-04-24  Carl Hetherington  <cth@carlh.net>

	* Fix crash on pressing Ctrl+A in some cases (#525).

	* Make disk space check take account of whether hard links
	are supported by the target filesystem (#511).

	* Allow configuration of the encryption key (#534).

	* Version 1.78.7 released.

2015-04-24  carl  <cth@carlh.net>

	* Various fixes to bad timeline drag behaviour when
	snapping.

	* Fix some flickering in the film editor when dragging
	things in the timeline on OS X.

2015-04-22  c.hetherington  <cth@carlh.net>

	* Add tentative P3 colour conversion preset.

2015-04-22  Carl Hetherington  <cth@carlh.net>

	* Use ~/Library/Preferences to store preferences on OS X,
	and don't give a fatal error if saving configuration fails
	(#509).

2015-04-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.6 released.
