@@ -40,7 +40,9 @@ private:
 	OutputAudioFrame _done;
 	int64_t _samples_per_point;
 	std::vector<AudioPoint> _current;
-
+	float _overall_peak;
+	OutputAudioFrame _overall_peak_frame;
+	
 	boost::shared_ptr<AudioAnalysis> _analysis;
 
 	boost::signals2::scoped_connection _player_connection;
