@@ -314,15 +314,7 @@ FilmViewer::set_position_text (Time t)
 	/* Count frame number from 1 ... not sure if this is the best idea */
 	_frame_number->SetLabel (wxString::Format (wxT("%d"), int (rint (t * fps / TIME_HZ)) + 1));
 	
-	double w = static_cast<double>(t) / TIME_HZ;
-	int const h = (w / 3600);
-	w -= h * 3600;
-	int const m = (w / 60);
-	w -= m * 60;
-	int const s = floor (w);
-	w -= s;
-	int const f = rint (w * fps);
-	_timecode->SetLabel (wxString::Format (wxT("%02d:%02d:%02d.%02d"), h, m, s, f));
+	_timecode->SetLabel (time_to_timecode (t, fps));
 }
 
 /** Ask the player to emit its next frame, then update our display */
