@@ -1,5 +1,8 @@
 2015-05-07  carl  <cth@carlh.net>
 
+	* Tidy audio analysis dialogue a bit and add a note of
+	the overall peak (#557).
+
 	* Fix sometimes-missing channel labels on OS X audio analysis.
 
 2015-05-06  Carl Hetherington  <cth@carlh.net>
